# parallel

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/image_flip/: image_stuff.c  image_stuff.h  main.c
src/image_flip_parallel/: image_stuff.c  image_stuff.h  main.c
